# restaurant

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
app/: Cargo.toml
app/src/: config.rs  db.rs  event.rs  lib.rs  main.rs  projector.rs  restaurant.rs  service.rs  sql_source.rs
app/tests/: test_queries.rs
client/: Cargo.toml
client/src/: lib.rs  main.rs
config/: restaurant.toml
toro/: Cargo.toml  README.md
toro/src/: lib.rs
