[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
toro = { path = "../toro" }

# http services deps
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }

r2d2 = "0.8"
r2d2_sqlite = "0.20"

toml = "0.5"
serde_derive = "1.0"
serde = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"

[dev-dependencies]
client = { path = "../client" }
